GPB-57 Fix colors and add colors to storybook

--- a/packages/frontend/src/stories/colors.mdx
+++ b/packages/frontend/src/stories/colors.mdx
@@ -6,28 +6,29 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
 
 <ColorPalette>
   <ColorItem
-    title="theme.color.greyscale"
-    subtitle="Some of the greys"
-    colors={{ White: "#FFFFFF", Alabaster: "#F8F8F8", Concrete: "#F3F3F3" }}
-  />
-  <ColorItem
     title="theme.color.primary"
-    subtitle="Coral"
-    colors={{ WildWatermelon: "#FF4785" }}
+    subtitle="Primary Colors"
+    colors={{
+      Blue: "#0066FF",
+      Red: "#D84B4B",
+      Black: "#01193D",
+      Gray: "#D9D9D9",
+      Green: "#0B8C09",
+    }}
   />
   <ColorItem
     title="theme.color.secondary"
-    subtitle="Ocean"
-    colors={{ DodgerBlue: "#1EA7FD" }}
+    subtitle="Secondary Colors"
+    colors={{
+      Red: "#FF0000",
+      Yellow: "#DFE30C",
+      Green: "#039E00",
+    }}
   />
   <ColorItem
-    title="theme.color.positive"
-    subtitle="Green"
-    colors={{
-      Apple: "rgba(102,191,60,1)",
-      Apple80: "rgba(102,191,60,.8)",
-      Apple60: "rgba(102,191,60,.6)",
-      Apple30: "rgba(102,191,60,.3)",
-    }}
+    title="theme.button.primary"
+    subtitle="Button Primary Colors"
+    colors={{ Blue: "#06367D" }}
+  />
   />
 </ColorPalette>
