--- a/packages/frontend/src/stories/Icon.mdx
+++ b/packages/frontend/src/stories/Icon.mdx
@@ -12,18 +12,15 @@ import { Meta } from "@storybook/blocks";
 
 ## How to use:
 
-You can use the following icons using the Icon component or with the component made with the name of the Icon.
-Example:
+You can use the following icons using the Icon component or the component with the name of the Icon. Example:
 
 `<Icon name:"BankIcon" />`
 or also
 `<BankIcon />`
 
-Some icons have properties:
-The properties are indicated in the icon name of the next list.
+Some icons have properties. The properties are indicated in the icon name in the following list.
 
-ArrowIcon is the only icon with the property direction that allows "up", "down", "left" and "right" values.
-The others icons you can just add fill o hidden if it is indicated in the icon name of the next list.
+ArrowIcon is the only icon with the property direction that allows values of "up", "down", "left", and "right". For the other icons, you can simply add fill or hidden if it is indicated in the icon name in the following list.
 
 `<Icon name:"BankIcon" fill />`
 or also
