--- a/packages/frontend/src/stories/colors.mdx
+++ b/packages/frontend/src/stories/colors.mdx
@@ -5,7 +5,7 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
 <Meta title="Foundation/Colors" />
 
 <h2> Main UI Color </h2>
-<p>Used as main colors for user interface and components</p>
+<p>Used as the main colors for the user interface and components.</p>
 
 <ColorPalette>
 
@@ -57,7 +57,7 @@ import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
 
 <ColorItem
   title="Greyscale palette"
-  subtitle="Used as layout and text colors mainly"
+  subtitle="Used mainly as layout and text colors"
   colors={{
     "greyscale-black": "#000000",
     "greyscale-BlackClose": "#0b0b0b",
