--- a/packages/frontend/src/stories/layouts.mdx
+++ b/packages/frontend/src/stories/layouts.mdx
@@ -8,9 +8,9 @@ import { Meta } from "@storybook/blocks"
 <br />
 <br />
 
-## Breackpoints
+## Breakpoints
 
-The breackpoints used are:
+The breakpoints used are::
 
 <table style={{ width: "80%"}}>
 <th> Name</th>
@@ -44,9 +44,9 @@ The breackpoints used are:
 
 ### How to use them:
 
-    We use SASS. You need to include them with @include:
+    We use SASS. To include them, use @include:
     #
-    Example: ``` @include mq("tablet") ```
+    Example: ` @include mq("tablet") `
     #
-    Be sure you import variables.sass file in your module.sass:
-    ``` @use "../ui/styles/variables.sass ```
+    Make sure to import the variables.sass file in your module.sass:
+    ` @use "../ui/styles/variables.sass `
