Fixed and Added stories

--- a/packages/frontend/src/stories/Icon.mdx
+++ b/packages/frontend/src/stories/Icon.mdx
@@ -4,7 +4,7 @@ import Icon from "../app/ui/iconComponent/Icon.tsx";
 import { iconsConfig } from "./icons.config";
 import { Meta } from "@storybook/blocks";
 
-<Meta title="Foundation/Icons" />
+<Meta title="Icons/Icons" />
 
 # Icons
 
@@ -29,6 +29,8 @@ or also
 `<Icon name:"ArrowIcon" direction="up">`
 or also
 `<ArrowIcon direction="up">`
+
+If you want to lazy de load of the icons, please use `<IconLazy name:"BankIcon" >` instead.
 
 <br />
 <h2>Grawiki Icons</h2>
